syntax = "proto3";

option java_package = "com.grpcserver.product";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "date.proto";



service ProductService{
 
 rpc findAllRepeated(Product) returns(ProductList);

   rpc insert(Product) returns(APIResponse);

    rpc deleteById(Product) returns(APIResponse);
    rpc findById(google.protobuf.Int32Value) returns(Product);
    rpc update(Product) returns(APIResponse);

   

   

}


message Product{

	int32 purchase_item = 1;
    string productname = 2;
    string productbrand = 3;
    double productprice = 4;
    string productdescription = 5;
    int32 productquantity = 6;
   .google.type.Date productexpirationdate = 7;



}

message ProductList {
   
 repeated Product product = 1;
 google.protobuf.Int64Value resultCount=2;
   

}




message APIResponse{
      string responsemessage = 1;
      int32  responseCode  = 2;
}




